--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "devDependencies": {
         "@babel/core": "^7.23.6",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-decorators": "^7.23.7",
         "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
         "@babel/preset-typescript": "^7.23.3",
         "@commitlint/cli": "^17.1.2",
