wip: add Auto decorator

--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -4,5 +4,7 @@
         "jsx": "preserve",
         "jsxImportSource": "solid-js",
         "noImplicitThis": false,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     }
 }
