--- a/packages/examples/counter/tsconfig.json
+++ b/packages/examples/counter/tsconfig.json
@@ -1,4 +1,11 @@
 {
+    "compilerOptions": {
+        "jsx": "preserve",
+        "jsxImportSource": "solid-js",
+        "noImplicitThis": false,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
+    },
     "extends": "../tsconfig.json",
     "include": ["./src"]
 }
