--- a/packages/examples/todolist/package.json
+++ b/packages/examples/todolist/package.json
@@ -5,6 +5,7 @@
     "browser": "dist/index.js",
     "dependencies": {
         "@vgerbot/solidium": "1.0.0",
+        "reflect-metadata": "^0.2.1",
         "solid-js": "^1.8.7"
     }
 }
