--- a/packages/examples/counter/tsconfig.json
+++ b/packages/examples/counter/tsconfig.json
@@ -4,7 +4,8 @@
         "jsxImportSource": "solid-js",
         "noImplicitThis": false,
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "useDefineForClassFields": false
     },
     "extends": "../tsconfig.json",
     "include": ["./src"]
