--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -1,52 +1,54 @@
 {
-    "name": "@vgerbot/solidium-http",
-    "version": "1.0.0",
-    "description": "A state management library for SolidJS, Solidium leverages the power of Inversion of Control (IoC) to provide a robust and flexible solution. With a primary focus on promoting the separation of UI and logic, Solidium empowers SolidJS developers to achieve cleaner, more maintainable code.",
-    "author": "y1j2x34 <y1j2x34@qq.com>",
-    "homepage": "https://github.com/vgerbot-libraries/solidium/tree/main/packages/http#readme",
-    "license": "MIT",
-    "main": "lib/index.cjs.js",
-    "browser": "lib/index.umd.js",
-    "module": "lib/index.es.js",
-    "typings": "lib/index.d.ts",
-    "types": "lib/index.d.ts",
-    "exports": {
-      ".": {
-        "import": "./lib/index.es.js",
-        "browser": "./lib/index.umd.js",
-        "require": "./lib/index.cjs.js"
-      }
-    },
-    "library": "SolidiumHttp",
-    "directories": {
-      "lib": "lib",
-      "test": "__tests__"
-    },
-    "files": [
-      "lib"
-    ],
-    "publishConfig": {
-      "registry": "https://registry.npmjs.org/"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/vgerbot-libraries/solidium.git"
-    },
-    "scripts": {
-      "prebuild": "zx ../../scripts/clear.mjs -- ./lib"
-    },
-    "bugs": {
-      "url": "https://github.com/vgerbot-libraries/solidium/issues"
-    },
-    "dependencies": {
-      "@vgerbot/ioc": "^1.0.1",
-      "reflect-metadata": "^0.2.1"
-    },
-    "peerDependencies": {
-      "@vgerbot/ioc": ">=1.0.1"
-    },
-    "devDependencies": {
-      "@testing-library/jest-dom": "^6.1.5"
+  "name": "@vgerbot/solidium-http",
+  "version": "1.0.0",
+  "description": "A state management library for SolidJS, Solidium leverages the power of Inversion of Control (IoC) to provide a robust and flexible solution. With a primary focus on promoting the separation of UI and logic, Solidium empowers SolidJS developers to achieve cleaner, more maintainable code.",
+  "author": "y1j2x34 <y1j2x34@qq.com>",
+  "homepage": "https://github.com/vgerbot-libraries/solidium/tree/main/packages/http#readme",
+  "license": "MIT",
+  "main": "lib/index.cjs.js",
+  "browser": "lib/index.umd.js",
+  "module": "lib/index.es.js",
+  "typings": "lib/index.d.ts",
+  "types": "lib/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./lib/index.es.js",
+      "browser": "./lib/index.umd.js",
+      "require": "./lib/index.cjs.js"
     }
+  },
+  "library": "SolidiumHttp",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "lib"
+  ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vgerbot-libraries/solidium.git"
+  },
+  "scripts": {
+    "prebuild": "zx ../../scripts/clear.mjs -- ./lib"
+  },
+  "bugs": {
+    "url": "https://github.com/vgerbot-libraries/solidium/issues"
+  },
+  "dependencies": {
+    "@vgerbot/ioc": "^1.1.1",
+    "@vgerbot/lazy": "^1.0.6",
+    "@vgerbot/solidium": "1.0.0",
+    "reflect-metadata": "^0.2.1"
+  },
+  "peerDependencies": {
+    "@vgerbot/ioc": ">=1.1.1",
+    "@vgerbot/solidium": ">=1.0.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5"
   }
-  
+}
